
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct fuse_file_info {int dummy; } ;
typedef int off_t ;


 int ENOENT ;
 int pread (int ,char*,size_t,int ) ;
 int sh_fd ;
 int sh_path ;
 scalar_t__ strcmp (char const*,int ) ;

__attribute__((used)) static int hello_read(const char *path, char *buf, size_t size, off_t offset,
             struct fuse_file_info *fi)
{
   (void) fi;
   if (strcmp(path, sh_path) != 0)
       return -ENOENT;

   return pread(sh_fd, buf, size, offset);
}
